--- a/pom.xml
+++ b/pom.xml
@@ -14,35 +14,15 @@
         <java.version>1.8</java.version>
         <junit.version>4.12</junit.version>
         <maven-jar-plugin.version>3.2.0</maven-jar-plugin.version>
-        <spring.version>5.2.3.RELEASE</spring.version>
-        <maven-jar-plugin.version>3.2.0</maven-jar-plugin.version>
     </properties>
 
     <dependencies>
-        <!-- Spring -->
-        <dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring-core</artifactId>
-            <version>${spring.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring-context</artifactId>
-            <version>${spring.version}</version>
-        </dependency>
-
         <!-- Test -->
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <version>${junit.version}</version>
             <scope>compile</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring-test</artifactId>
-            <version>${spring.version}</version>
-            <scope>test</scope>
         </dependency>
     </dependencies>
 
@@ -55,7 +35,7 @@
                     <archive>
                         <manifest>
                             <addClasspath>true</addClasspath>
-                            <mainClass>com.ponodan.loader.Application</mainClass>
+                            <mainClass>com.ponodan.pizza-analyzer.Application</mainClass>
                         </manifest>
                     </archive>
                     <descriptorRefs>
