--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,11 @@
             <version>${junit.version}</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>org.zeroturnaround</groupId>
+            <artifactId>zt-zip</artifactId>
+            <version>1.14</version>
+        </dependency>
     </dependencies>
 
     <build>
