--- a/pom.xml
+++ b/pom.xml
@@ -23,7 +23,7 @@
             <artifactId>junit</artifactId>
             <version>${junit.version}</version>
             <scope>compile</scope>
-        </dependency>
+        </dependency>test
         <dependency>
             <groupId>org.zeroturnaround</groupId>
             <artifactId>zt-zip</artifactId>
